ui: use divs instead of p to remove bottom padding

--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -308,7 +308,7 @@
 {%- if submission_form.errors %}
 <div class="alert alert-danger alert-dismissible fade show mt-2 mb-0" role="alert">
   <h5 class="alert-heading">{{ _('Data Validation Errors') }}</h5>
-  <p>{{ _('The data you entered are not valid. Please check the affected questions and correct them.') }}</p>
+  <div>{{ _('The data you entered are not valid. Please check the affected questions and correct them.') }}</div>
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
