ui: use regular sized buttons instead

--- a/apollo/frontend/templates/frontend/participant_edit.html
+++ b/apollo/frontend/templates/frontend/participant_edit.html
@@ -54,8 +54,8 @@
         </table>
       </div>
       <div class="card-footer text-right">
-        <button type="button" id="cancelBtn" class="btn btn-secondary btn-lg">{{ _('Cancel') }}</button>
-        <button type="button" id="saveBtn" class="btn btn-primary btn-lg">{{ _('Save') }}</button>
+        <button type="button" id="cancelBtn" class="btn btn-secondary">{{ _('Cancel') }}</button>
+        <button type="button" id="saveBtn" class="btn btn-primary">{{ _('Save') }}</button>
       </div>
     </div>
   </div>
