--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -384,8 +384,8 @@
 {%- block footer -%}
   <div class="mt-n2 pb-2 w-25 d-flex justify-content-end">
     <div>
-      <button id="cancelBtn" class="btn btn-secondary btn-lg">{{ _('Cancel') }}</button>
-      <button type="button" id="saveBtn" class="btn btn-primary btn-lg">{{ _('Save') }}</button>
+      <button type="button" id="cancelBtn" class="btn btn-secondary">{{ _('Cancel') }}</button>
+      <button type="button" id="saveBtn" class="btn btn-primary">{{ _('Save') }}</button>
     </div>
   </div>
 {%- endblock %}
