--- a/apollo/frontend/templates/frontend/submission_edit.html
+++ b/apollo/frontend/templates/frontend/submission_edit.html
@@ -63,11 +63,8 @@
   <tr>
     <th>{{ _('Location') }}</th>
     <td>
-      {% for lt in location_types %}
-      {% set node = submission.location.make_path()[lt.name] %}
-      {% if node %}
-      {{ submission.location.make_path()[lt.name] }} &middot; <em>{{ lt.name }}</em>{% if not loop.last %} / {% endif %}
-      {% endif %}
+      {% for location_type, location_name in submission.location.make_path().items() %}
+      {{ location_name }} &middot; <em>{{ location_type }}</em>{% if not loop.last %} / {% endif %}
       {% else %}
       {{ _('N/A') }}
       {% endfor %}
@@ -75,11 +72,8 @@
     </td>
     {% for sib in siblings %}
     <td>
-      {% for lt in location_types %}
-      {% set node = sib.location.make_path()[lt.name] %}
-      {% if node %}
-      {{ submission.location.make_path()[lt.name] }} &middot; <em>{{ lt.name }}</em>{% if not loop.last %} / {% endif %}
-      {% endif %}
+      {% for location_type, location_name in submission.location.make_path().items() %}
+      {{ location_name }} &middot; <em>{{ location_type }}</em>{% if not loop.last %} / {% endif %}
       {% else %}
       {{ _('N/A') }}
       {% endfor %}
@@ -98,11 +92,8 @@
   <tr>
     <th>{{ _('Location') }}</th>
     <td>
-      {% for lt in location_types %}
-      {% set node = submission.location.make_path()[lt.name] %}
-      {% if node %}
-      {{ submission.location.make_path()[lt.name] }} &middot; <em>{{ lt.name }}</em>{% if not loop.last %} / {% endif %}
-      {% endif %}
+      {% for location_type, location_name in submission.location.make_path().items() %}
+      {{ location_name }} &middot; <em>{{ location_type }}</em>{% if not loop.last %} / {% endif %}
       {% else %}
       {{ _('N/A') }}
       {% endfor %}
@@ -317,7 +308,7 @@
 {%- if submission_form.errors %}
 <div class="alert alert-danger alert-dismissible fade show mt-2 mb-0" role="alert">
   <h5 class="alert-heading">{{ _('Data Validation Errors') }}</h5>
-  <p>{{ _('The data you entered are not valid. Please check the affected questions and correct them.') }}</p>
+  <div>{{ _('The data you entered are not valid. Please check the affected questions and correct them.') }}</div>
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
@@ -393,8 +384,8 @@
 {%- block footer -%}
   <div class="mt-n2 pb-2 w-25 d-flex justify-content-end">
     <div>
-      <button id="cancelBtn" class="btn btn-secondary btn-lg">{{ _('Cancel') }}</button>
-      <button type="button" id="saveBtn" class="btn btn-primary btn-lg">{{ _('Save') }}</button>
+      <button type="button" id="cancelBtn" class="btn btn-secondary">{{ _('Cancel') }}</button>
+      <button type="button" id="saveBtn" class="btn btn-primary">{{ _('Save') }}</button>
     </div>
   </div>
 {%- endblock %}
