ui: refactor breadcrumbs to accept urls for crumbs

--- a/apollo/templates/admin/location_builder.html
+++ b/apollo/templates/admin/location_builder.html
@@ -168,7 +168,13 @@
   <nav class="nav mb-4" aria-label="breadcrumb">
     <ol class="breadcrumb mb-n2">
         {% for breadcrumb in breadcrumbs %}
-        <li class="breadcrumb-item {%- if loop.last %} active{% endif %}" {%- if loop.last %} aria-current="page"{% endif %}>{{ breadcrumb }}</li>
+        <li class="breadcrumb-item {%- if loop.last %} active{% endif %}" {%- if loop.last %} aria-current="page"{% endif %}>
+          {% if breadcrumb.url -%}
+          <a href="{{ breadcrumb.url }}" class="text-decoration-none">{{ breadcrumb.text or breadcrumb }}</a>
+          {%- else -%}
+          {{ breadcrumb.text or breadcrumb }}
+          {%- endif %}
+        </li>
         {% endfor %}
     </ol>
   </nav>
