--- a/apollo/frontend/templates/frontend/layout.html
+++ b/apollo/frontend/templates/frontend/layout.html
@@ -107,13 +107,19 @@
         <div class="container mt-2">
             <div class="d-flex justify-content-between align-items-md-center flex-column flex-md-row mb-n2">
                 <nav class="nav mb-2" aria-label="breadcrumb">
+                {% block title -%}
                     <ol class="breadcrumb mb-n2">
-                        {% block title -%}
                         {% for breadcrumb in breadcrumbs %}
-                        <li class="breadcrumb-item {%- if loop.last %} active{% endif %}" {%- if loop.last %} aria-current="page"{% endif %}>{{ breadcrumb }}</li>
+                        <li class="breadcrumb-item {%- if loop.last %} active{% endif %}" {%- if loop.last %} aria-current="page"{% endif %}>
+                            {% if breadcrumb.url -%}
+                            <a href="{{ breadcrumb.url }}" class="text-decoration-none">{{ breadcrumb.text or breadcrumb }}</a>
+                            {%- else -%}
+                            {{ breadcrumb.text or breadcrumb }}
+                            {%- endif %}
+                        </li>
                         {% endfor %}
-                        {%- endblock %}
                     </ol>
+                {%- endblock %}
                 </nav>
                 <div class="d-flex justify-content-between align-items-start flex-column flex-md-row">
                     {% block toolbar %}{% endblock %}
