--- a/apollo/templates/admin/macros.html
+++ b/apollo/templates/admin/macros.html
@@ -1,14 +1,14 @@
 {% macro locations_builder(model, column) %}
 <div class="btn-group btn-group" role="group" aria-label="...">
   <button type="button" class="btn btn-primary" disabled>{{ model.location_types.count() }}</button>
-  <a href="{{ url_for('locations.locations_builder', location_set_id=model.id) }}" class="btn btn-primary">{{ _('Manage') }}</a>
+  <a href="{{ url_for('locationset.builder', location_set_id=model.id) }}" class="btn btn-primary">{{ _('Manage') }}</a>
 </div>
 {% endmacro %}
 
 {% macro locations_list(model, column) %}
 <div class="btn-group btn-group" role="group" aria-label="...">
   <button type="button" class="btn btn-primary" disabled>{{ model.locations.count() }}</button>
-  <a href="{{ url_for('locations.location_list', location_set_id=model.id) }}" class="btn btn-primary">{{ _('Manage') }}</a>
+  <a href="{{ url_for('locationset.locations_list', location_set_id=model.id) }}" class="btn btn-primary">{{ _('Manage') }}</a>
 </div>
 {% endmacro %}
 
