--- a/apollo/templates/admin/base.html
+++ b/apollo/templates/admin/base.html
@@ -5,12 +5,13 @@
 <html lang="{{ g.locale.language }}" {%- if g.locale.text_direction == 'rtl' %} dir="rtl"{% endif %}>
   <head>
     <title>{% block title %}{% if admin_view.category %}{{ admin_view.category }} - {% endif %}{{ admin_view.name }} - {{ admin_view.admin.name }}{% endblock %}</title>
-    {% block head_meta %}
+    {%- block head_meta %}
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
-    {% endblock %}
-    {% block head_css %}
+        <meta name="csrf-token" content="{{ csrf_token() }}">
+    {%- endblock %}
+    {%- block head_css %}
       {% if g.locale.text_direction == 'rtl' -%}
       <link rel="stylesheet" href="{{ asset_url_for('styles-rtl.css') }}">
       {%- else -%}
@@ -19,14 +20,14 @@
       <style>
       .shrink { width: 0.1%; white-space: nowrap; }
       </style>
-    {% endblock %}
-    {% block head %}
-    {% endblock %}
-    {% block head_tail %}
-    {% endblock %}
+    {%- endblock %}
+    {%- block head %}
+    {%- endblock %}
+    {%- block head_tail %}
+    {%- endblock %}
   </head>
   <body class="pb-4 mb-5">
-    {% block page_body %}
+    {%- block page_body %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top" role="navigation">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="container">
@@ -38,18 +39,18 @@
                   class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarNav">
               <div class="d-flex flex-column flex-lg-row align-items-start justify-content-between w-100">
-                  {% block main_menu %}
+                  {%- block main_menu %}
                   <ul class="navbar-nav order-2 order-lg-1">
                     {{ layout.menu() }}
                   </ul>
-                  {% endblock %}
-                  {% block menu_links %}
+                  {%- endblock %}
+                  {%- block menu_links %}
                   <ul class="navbar-nav order-1 order-lg-2">
                     {{ layout.menu_links() }}
                   </ul>
-                  {% endblock %}
-                  {% block access_control %}
-                  {% endblock %}
+                  {%- endblock %}
+                  {%- block access_control %}
+                  {%- endblock %}
               </div>
           </div>
       </div>
@@ -66,7 +67,7 @@
         {% block body %}{% endblock %}
       </div>
     </main>
-    {% endblock %}
+    {%- endblock %}
 
     <footer class="footer mt-auto py-1 fixed-bottom bg-white">
         <div class="container">
@@ -77,7 +78,7 @@
         </div>
     </footer>
 
-    {% block tail_js %}
+    {%- block tail_js %}
     {% if g.locale.text_direction == 'rtl' -%}
     <script type="text/javascript" src="{{ asset_url_for('scripts-rtl.js') }}" charset="utf-8"></script>
     {%- else -%}
@@ -102,9 +103,9 @@
         });
       })();
     </script>
-    {% endblock %}
+    {%- endblock %}
 
-    {% block tail %}
-    {% endblock %}
+    {%- block tail %}
+    {%- endblock %}
   </body>
 </html>
