--- a/apollo/templates/admin/macros.html
+++ b/apollo/templates/admin/macros.html
@@ -22,7 +22,7 @@
 {% macro participants_list(model, column) %}
 <div class="btn-group btn-group" role="group" aria-label="...">
   <button type="button" class="btn btn-primary" disabled>{{ model.participants.count() }}</button>
-  <a href="{{ url_for('participants.participant_list_with_set', participant_set_id=model.id) }}" class="btn btn-primary">{{ _('Manage') }}</a>
+  <a href="{{ url_for('participantset.participants_list', participant_set_id=model.id) }}" class="btn btn-primary">{{ _('Manage') }}</a>
 </div>
 {% endmacro %}
 
